--- a/Forgot_Password.html
+++ b/Forgot_Password.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="Forget_Password.css">
+        <link rel="stylesheet" href="Forgot_Password.css">
         <title>Forget Password</title>
     </head>
     
